@@ -19,14 +19,11 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<checkstyle.version>10.3.4</checkstyle.version>
-		<encoding>UTF-8</encoding>
-		<!-- SonarCloud properties -->
-		<sonar.projectKey>your-project-key</sonar.projectKey>
-		<sonar.organization>your-organization</sonar.organization>
+		<sonar.projectKey>B1M0r_Store2</sonar.projectKey>
+		<sonar.organization>b1m0r</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<!-- JaCoCo version -->
-		<jacoco.version>0.8.7</jacoco.version>
+		<!--suppress UnresolvedMavenProperty -->
+		<sonar.login>${SONAR_TOKEN}</sonar.login>
 	</properties>
 
 	<dependencies>
@@ -121,54 +118,6 @@
 				</configuration>
 			</plugin>
 
-			<!-- JaCoCo Plugin for Code Coverage -->
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>check</id>
-						<goals>
-							<goal>check</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<rule>
-									<element>BUNDLE</element>
-									<limits>
-										<limit>
-											<counter>LINE</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>0.80</minimum>
-										</limit>
-									</limits>
-								</rule>
-							</rules>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- SonarCloud Plugin -->
-			<plugin>
-				<groupId>org.sonarsource.scanner.maven</groupId>
-				<artifactId>sonar-maven-plugin</artifactId>
-				<version>3.9.1.2184</version>
-			</plugin>
-
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -189,27 +138,40 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.13</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						-XX:+EnableDynamicAgentLoading
+						-Djdk.instrument.traceUsage=true
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.11.0.3922</version>
+			</plugin>
 		</plugins>
 	</build>
-
-	<!-- SonarCloud Quality Gate Profile -->
-	<profiles>
-		<profile>
-			<id>sonar</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-				<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-				<sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
-				<sonar.language>java</sonar.language>
-				<sonar.java.binaries>${project.basedir}/target/classes</sonar.java.binaries>
-				<sonar.sources>src/main/java</sonar.sources>
-				<sonar.tests>src/test/java</sonar.tests>
-				<sonar.test.inclusions>**/*Test.java</sonar.test.inclusions>
-				<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
-			</properties>
-		</profile>
-	</profiles>
 </project>
